# tiny-transformer-build

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_edge_cases.py  test_gradients.py  verify_pe_details.py  verify_pe_formula.py
configs/: base.yaml  shakespeare.yaml  tiny.yaml
data/: README.md  download_shakespeare.sh
docs/: BUILD_STATUS.md  CLI_VALIDATION_CHECKLIST.md  LEARNING_PATH.md  REVIEW_GUIDE.md  REVIEW_QUICKSTART.md  REVIEW_SUMMARY.md
docs/modules/00_setup/: README.md  pytorch_refresher.ipynb  setup_walkthrough.ipynb  shape_debugging_primer.md
docs/modules/01_attention/: notebook.ipynb  theory.md
docs/modules/01_attention/exercises/: exercises.py  solutions.py
docs/modules/02_multi_head/: README.md  theory.md
docs/modules/03_transformer_block/: README.md  notebook.ipynb  theory.md
docs/modules/03_transformer_block/exercises/: exercises.py  solutions.py
docs/modules/04_embeddings/: README.md  theory.md
docs/modules/04_embeddings/exercises/: exercises.py  solutions.py
docs/modules/05_full_model/: README.md  notebook.ipynb  theory.md
docs/modules/05_full_model/exercises/: exercises.py  solutions.py
docs/modules/06_training/: README.md  notebook.ipynb  theory.md
docs/modules/06_training/exercises/: README.md  __init__.py  exercises.py  solutions.py
docs/modules/07_sampling/: README.md  notebook.ipynb  theory.md
docs/modules/07_sampling/exercises/: exercises.py  solutions.py
docs/modules/08_engineering/: README.md  theory.md
docs/modules/09_capstone/: README.md  notebook.ipynb  walkthrough.md
examples/: shakespeare_demo.py
review_logs/: COMPREHENSIVE_REVIEW_FINDINGS.md  CRITICAL_FIXES_APPLIED.md  review_20251117.md
tests/: test_attention.py  test_embeddings.py  test_engineering.py  test_feedforward.py  test_model.py  test_multi_head.py  test_sampling.py  test_training.py  test_transformer_block.py
tiny_transformer/: __init__.py  attention.py  config.py  feedforward.py  model.py  multi_head.py  transformer_block.py
tiny_transformer/embeddings/: __init__.py  combined_embedding.py  positional_encoding.py  token_embedding.py
tiny_transformer/sampling/: __init__.py  generator.py  strategies.py
tiny_transformer/training/: __init__.py  dataset.py  scheduler.py  trainer.py  utils.py
tiny_transformer/utils/: __init__.py  checkpoint.py  experiment.py  logging.py  shape_checker.py  visualization.py
tools/: generate.py  interactive.py  review_helper.sh  shakespeare_generate.py  shakespeare_train.py  train.py  validate_all.py  validate_cli.sh  verify_environment.py
